--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,3 +62,42 @@ user-name {
 .btn-primary:visited, .btn-danger:visited {
     color: #fff;
 }
+
+.features {
+    ul {
+        margin-left: 0;
+        padding-left: 15px;
+    }
+}
+
+.jumbotron {
+    text-align: center;
+    background-image: asset-url('sky.jpg');
+    background-size: cover;
+    color: #555;
+    font-family: 'Helvetica Neue' !important;
+    font-stretch: expanded;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+    /*
+    h2 {
+    font-size: 35px !important;
+    .lead {
+    font-family: 'Helvetica Neue' !important;
+    font-size: 30px !important;
+    }
+    } */
+}
+
+.no-left-padding {
+    padding-left: 0 !important;
+}
+
+.listing {
+    list-style: none;
+    padding-left: 0;
+}
+
